Refactoring, Sonar